--- a/src/app/delete/delete.component.html
+++ b/src/app/delete/delete.component.html
@@ -1,5 +1,5 @@
 <h1 class="ribbon">
-  <strong class="ribbon-content">Danh sách cuốn sách:  cuốn</strong>
+  <strong class="ribbon-content">Xóa sách</strong>
 </h1>
 <style>
   .ribbon {
