--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -39,7 +39,7 @@
     position: absolute;
     display: block;
     border-style: solid;
-    border-color: #804f7c transparent transparent transparent;
+    border-color: greenyellow transparent transparent transparent;
     bottom: -1em;
   }
   .ribbon .ribbon-content:before {
