--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -5,6 +5,33 @@
   h3{
     color: red;
   }
+  input[type=text] {
+    width: 30%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 3px solid #e9d8f4;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
+  }
+  textarea[type=text] {
+    width: 30%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 3px solid #e9d8f4;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
+  }
+
+  input[type=text]:focus {
+    border: 3px solid #58257b;
+  }
+  textarea[type=text]:focus {
+    border: 3px solid #58257b;
+  }
   .ribbon {
     font-size: 16px !important;
     /* This ribbon is based on a 16px font side and a 24px vertical rhythm. I've used em's to position each element for scalability. If you want to use a different font size you may have to play with the position of the ribbon elements */
@@ -78,7 +105,7 @@
   <h3>Tác giả</h3>
   <input name="name" type="text" [(ngModel)]="book.author"><br>
   <h3>Mô tả</h3>
-  <textarea rows="10" cols="80" name="name" type="text" [(ngModel)]="book.description"></textarea><br><br>
+  <textarea rows="7" cols="80" name="name" type="text" [(ngModel)]="book.description"></textarea><br><br>
   <button class="badge-success" type="submit" (click)="createBook()">Thêm</button>
 
 </form>
